Regression: Copy to selected on addons properties crach Blender #119999

Closed
opened 2024-03-28 03:49:38 +01:00 by Milan-Hrabovsky · 12 comments

System Information
Operating system: Windows 11 Pro
Graphics card: Nvidia RTX 3080

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-08 00:32, hash: 6dffc162c7b9
Worked: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-27 00:02, hash: cfb60c98be7d

Caused by: 6adf5adb7f

Short description of error
When I try to copy attribute value to selected, Blender crash. For the default Blender properties, it is working.
I have tested it, my friend too and has the same problem.
Alt + Click works without any problems

Exact steps for others to reproduce the error
Not, crashing blender.

**System Information** Operating system: Windows 11 Pro Graphics card: Nvidia RTX 3080 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-08 00:32, hash: `6dffc162c7b9` Worked: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-27 00:02, hash: `cfb60c98be7d` Caused by: 6adf5adb7fc57bf1db726be7709ae0faf267ae01 **Short description of error** When I try to copy attribute value to selected, Blender crash. For the default Blender properties, it is working. I have tested it, my friend too and has the same problem. Alt + Click works without any problems **Exact steps for others to reproduce the error** Not, crashing blender.
Milan-Hrabovsky added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-03-28 03:49:38 +01:00
Member

Hi, there's not enough information to determine what exactly is going wrong here. Could you try upload the crash log? Also please give us a test file that can replicate the issue. Thanks!

Hi, there's not enough information to determine what exactly is going wrong here. Could you try upload the [crash log](https://docs.blender.org/manual/en/latest/troubleshooting/crash.html#windows)? Also please give us a test file that can replicate the issue. Thanks!
YimingWu added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-03-28 04:36:10 +01:00

Hi, here is an example, crash log and video. In test file, u can find aa script, which register simple property for the test.
Thank You.

Hi, here is an example, crash log and video. In test file, u can find aa script, which register simple property for the test. Thank You.

Seems like this issue still persists in Blender 4.1.1.

Seems like this issue still persists in Blender 4.1.1.
Iliya Katushenock added the
Interest
Overrides
label 2024-04-18 14:58:43 +02:00
Iliya Katushenock changed title from Copy to selected on addons properties crach Blender to Regression: Copy to selected on addons properties crach Blender 2024-04-18 20:29:45 +02:00
Iliya Katushenock added this to the 4.2 LTS milestone 2024-04-18 20:30:02 +02:00
Iliya Katushenock removed this from the 4.2 LTS milestone 2024-04-18 20:30:27 +02:00
@mont29 /

I cannot reproduce any crash in neither 4.2 (main) nor 4.1 branches with debug builds + ASAN...

And @mod_moder please stop adding the override tag to everything, this is getting ridiculous.

I cannot reproduce any crash in neither 4.2 (main) nor 4.1 branches with debug builds + ASAN... And @mod_moder please stop adding the override tag to everything, this is getting ridiculous.
Bastien Montagne removed the
Interest
Overrides
label 2024-04-19 10:34:35 +02:00

Can confirm crash in release builds though... hate these :(

Can confirm crash in release builds though... hate these :(
Bastien Montagne added
Type
Bug
and removed
Type
Report
labels 2024-04-19 11:06:36 +02:00

Hey @mont29, thank you for taking a look. I am not really sure if I am able to explain it better than previous messages, but I have attached a couple more videos in hope that it might help 😅

Hey @mont29, thank you for taking a look. I am not really sure if I am able to explain it better than previous messages, but I have attached a couple more videos in hope that it might help 😅

Oh commented almost at the same time, well 🙈

Oh commented almost at the same time, well 🙈
Member

@mont29 : apparently prop_src_type != prop_dst_type where prop_src_type is PROP_INT and prop_dst_type is PROP_BOOLEAN

1  rna_property_override_apply_default              rna_rna.cc                     2553  0x1f70109 
2  rna_property_override_operation_apply            rna_access_compare_override.cc 622   0x1dab773 
3  RNA_property_copy                                rna_access_compare_override.cc 260   0x1daa94d 
4  copy_to_selected_button                          interface_ops.cc               1519  0x224da88 
5  copy_to_selected_button_exec                     interface_ops.cc               1540  0x224db86 
6  wm_operator_invoke                               wm_event_system.cc             1555  0x14cec95 
7  wm_operator_call_internal                        wm_event_system.cc             1778  0x14cf44d 
8  WM_operator_name_call_ptr                        wm_event_system.cc             1792  0x14cf4ee 
9  WM_operator_name_call_ptr_with_depends_on_cursor wm_event_system.cc             1982  0x14cfae7 
10 ui_apply_but_funcs_after                         interface_handlers.cc          1023  0x2206eb2 
11 ui_popup_handler                                 interface_handlers.cc          11774 0x2224bb6 
12 wm_handler_ui_call                               wm_event_system.cc             827   0x14cce45 
13 wm_handlers_do_intern                            wm_event_system.cc             3319  0x14d4768 
14 wm_handlers_do                                   wm_event_system.cc             3438  0x14d4e1e 
15 wm_event_do_handlers                             wm_event_system.cc             4065  0x14d7074 
16 WM_main                                          wm.cc                          635   0x14c37e6 
17 main                                             creator.cc                     586   0x71208b  
@mont29 : apparently `prop_src_type != prop_dst_type` where prop_src_type is `PROP_INT` and prop_dst_type is `PROP_BOOLEAN` ``` 1 rna_property_override_apply_default rna_rna.cc 2553 0x1f70109 2 rna_property_override_operation_apply rna_access_compare_override.cc 622 0x1dab773 3 RNA_property_copy rna_access_compare_override.cc 260 0x1daa94d 4 copy_to_selected_button interface_ops.cc 1519 0x224da88 5 copy_to_selected_button_exec interface_ops.cc 1540 0x224db86 6 wm_operator_invoke wm_event_system.cc 1555 0x14cec95 7 wm_operator_call_internal wm_event_system.cc 1778 0x14cf44d 8 WM_operator_name_call_ptr wm_event_system.cc 1792 0x14cf4ee 9 WM_operator_name_call_ptr_with_depends_on_cursor wm_event_system.cc 1982 0x14cfae7 10 ui_apply_but_funcs_after interface_handlers.cc 1023 0x2206eb2 11 ui_popup_handler interface_handlers.cc 11774 0x2224bb6 12 wm_handler_ui_call wm_event_system.cc 827 0x14cce45 13 wm_handlers_do_intern wm_event_system.cc 3319 0x14d4768 14 wm_handlers_do wm_event_system.cc 3438 0x14d4e1e 15 wm_event_do_handlers wm_event_system.cc 4065 0x14d7074 16 WM_main wm.cc 635 0x14c37e6 17 main creator.cc 586 0x71208b ```

@lichtwerk yes, that is the trigger of the issue - but first need to fix the crash (code assumed liboverride data was available at that point, which is not the case obviously when using 'regular' RNA copy feature).

Once this is done, we can figure out why the property types are different here :(

@lichtwerk yes, that is the trigger of the issue - but first need to fix the crash (code assumed liboverride data was available at that point, which is not the case obviously when using 'regular' RNA copy feature). Once this is done, we can figure out why the property types are different here :(
Member

@lichtwerk yes, that is the trigger of the issue - but first need to fix the crash (code assumed liboverride data was available at that point, which is not the case obviously when using 'regular' RNA copy feature).

Once this is done, we can figure out why the property types are different here :(

Ah yep, prop_storage was NULL...

> @lichtwerk yes, that is the trigger of the issue - but first need to fix the crash (code assumed liboverride data was available at that point, which is not the case obviously when using 'regular' RNA copy feature). > > Once this is done, we can figure out why the property types are different here :( Ah yep, `prop_storage` was NULL...
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-19 12:04:18 +02:00

Crash should be fixed by 8b1154a854.

However, the actual issue here (that two properties that should have exactly the same type are detected as of different type) remains under investigation.

Crash should be fixed by 8b1154a854. However, the actual issue here (that two properties that should have exactly the same type are detected as of different type) remains under investigation.
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2024-04-19 12:06:13 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-19 15:52:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119999
No description provided.