Fix #119999: Regression: Copy to selected on addons properties crash Blender.

Changes introduced in 6adf5adb7f did not take into account that this
code is also used by regular RNA copy code, in which case there is no
override data available.

NOTE: This commit fixes the crash. The root of the issue (that two
propoerties that should have identical types are detected as of
different types) remains under investigation.