source/blender/makesrna/intern/rna_rna.cc
@@ -250,8 +250,12 @@ const EnumPropertyItem rna_enum_property_string_search_flag_items[] = {
 #  include "BKE_idprop.hh"
 #  include "BKE_lib_override.hh"
 
+#  include "RNA_path.hh"
+
 #  include <optional>
 #  include <string>
+
+#  include <fmt/format.h>
 
 static CLG_LogRef LOG_COMPARE_OVERRIDE = {"rna.rna_compare_override"};
 
@@ -2550,15 +2554,21 @@ bool rna_property_override_apply_default(Main *bmain,
   if (prop_src_type != prop_dst_type ||
       (prop_storage && prop_src_type != RNA_property_type(prop_storage)))
   {
+    std::optional<std::string> prop_rna_path = rnaapply_ctx.liboverride_property ?
+                                                   rnaapply_ctx.liboverride_property->rna_path :
+                                                   RNA_path_from_ID_to_property(ptr_dst, prop_dst);
     CLOG_WARN(&LOG_COMPARE_OVERRIDE,
               "%s.%s: Inconsistency between stored property type (%d) and linked reference one "
               "(%d), skipping liboverride apply",
               ptr_dst->owner_id->name,
-              rnaapply_ctx.liboverride_property->rna_path,
+              prop_rna_path ? prop_rna_path->c_str() :
+                              fmt::format(" ... .{}", prop_dst->name).c_str(),
               prop_src_type,
               prop_dst_type);
     /* Keep the liboverride property, update its type to the new actual one. */
-    rnaapply_ctx.liboverride_property->rna_prop_type = prop_dst_type;
+    if (rnaapply_ctx.liboverride_property) {
+      rnaapply_ctx.liboverride_property->rna_prop_type = prop_dst_type;
+    }
     return false;
   }
 
